<resources>
    <string name="app_name">AN10-onl</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="spiice_firststart">Spiice</string>
    <string name="discover_the_platform">Discover the platform</string>
    <string name="login_start">You have no account ? Log-in</string>
    <string name="spiice">Spiice</string>
    <string name="skip">Skip</string>
    <string name="worldtext_secondpage">Find projects from companies\n everywhere in the world</string>
    <string name="text_thirdpage">Make money while working\n on awesome projects</string>
    <string name="text_fourthpage">Chat with others freelancers\n and develop your network</string>
    <string name="text_fifthpage">Work hard and level up!</string>
    <string name="text_sixthpage">Enjoy your progress!</string>
    <string name="login">Log-in</string>
    <string name="button_login">Log-in</string>
    <string name="return_to_sign_up">Return to Sign-up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign-up</string>
    <string name="you_have_an_account">You have an account ? <b>Log-in</b></string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email_blank">Required field</string>
    <string name="email_invalid">Invalid email</string>
    <string name="password_blank">Required field</string>
    <string name="firstName_blank">Required field</string>
    <string name="lastName_blank">Required field</string>
    <string name="passwordLessThan6">Password must be at least 6 characters</string>
    <string name="passwordMoreThan50">Maximum number of characters exceeded</string>
    <string name="passwordUpperCase">Must have at least 1 uppercase letter</string>
    <string name="passwordLowerCase">Must have at least 1 lowercase letter</string>
    <string name="passwordDigit">Must have at least 1 digit</string>
    <string name="passwordCharacter">Must have at least 1 special character</string>
    <string name="addnote_back">Back</string>
    <string name="addnote_title">Title</string>
    <string name="addnote_message">Message</string>
    <string name="add_note">Add note</string>
    <string name="addnote_buttontext">Add</string>
    <string name="logout_list">Logout</string>
    <string name="add_new">Add new</string>
    <string name="all_notes">All notes</string>
    <string name="search">Search</string>
    <string name="filters">Filters</string>
    <string name="profile">Profile</string>
    <string name="delete_profile">Delete profile</string>
    <string name="delete_all_notes">Delete all notes</string>
    <string name="notes">Notes</string>
    <string name="add">Add note</string>
</resources>